--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+body{
+	background-color : yellow;
+	text-align : center;
+}
+
+#f1{
+	color: blue;
+}
+
+#f2{
+	color: red;
+}
